    New feature: Can enable so that 'Always notify' means it sends
    notifications on all followups and not just new issues. 
    
    New feature: Followup duplicates are only duplicates if they have
    the same name and content and was posted within 5 minutes. (Thanks
    Radim)
    
    New feature: Mobile web XHTML version which is lighter and more
    optimized CSS margins.

    Bug fixed: Possible KeyErrors raised on deleting session keys when
    running Zope in a cluster.

    Bug fixed: CSS corrected so body of issue text gets the same font
    as the rest of the page.
    
    New feature: Ability to override which email addresses to notify
    on a followup.
    
- 0.11.0

    Bug fixed: Saved filters that refer to objects that no longer
    exist could cause an error on the filter option.
    
    New feature: Monthly summary report

    New feature: By default ID is shown with title on new Issue
    Tracker instances.

    Bug fixed: Page AddIssue now security protected with the same
    permission as for submitting issues.
    
    New feature: Made IssueTrackerProduct work in Zope 2.12. (Thanks
    Suresh V)
    
    New feature: Now possible to filter by assignees.
    
    New feature: Home page list of recent issues is much optimized by
    using the catalog to search by 'modifydate'.
    
    Bug fixed: Editing urgency and type on submitted issues could
    cause UnicodeDecodeError.
    
    New feature: Added Markdown as a display format option if installed.
    To enable, just install markdown on the python path.
    
    Bug fixed: Previewing an issue with chosen sections that are
    non-ASCII caused a UnicodeDecodeError.
    
    New feature: DEFAULT_ENCODE_EMAILDISPLAY is disabled by default in
    new trackers. Issuetrackers are rarely public.
    
    Bug fixed: Custom checkbox boolean fields whose values were True
    appeared as a unchecked checkbox on editing details (Real#0893)
    